--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,57 @@ jobs:
       - store_artifacts:
           path: ~/junit
 
+  test-mysql:
+    <<: *defaults
+    docker:
+      - image: killbill/kbbuild:0.1.0
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+      - run: mvn clean install -Pmysql
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit
+
+  test-postgresql:
+    <<: *defaults
+    docker:
+      - image: killbill/kbbuild:0.1.0
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+      - run: mvn clean install -Ppostgresql
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit
+
 workflows:
   version: 2
   build-and-test:
     jobs:
       - build
       - test-h2:
+          requires:
+            - build
+      - test-mysql:
+          requires:
+            - build
+      - test-postgresql:
           requires:
             - build
