invoice: revisit PluginTaxCalculator implementation
We now pull historical invoices on demand, instead of pulling all invoices at once.

Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .idea/**/tasks.xml
 .idea/dictionaries
 
+.idea/jarRepositories.xml
+
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
