circleci: don't restore ro cache during build
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,6 @@ jobs:
       - image: killbill/kbbuild:0.7.0
     steps:
       - checkout
-      - restore_cache:
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
       - run:
           name: Setup dependencies
           command: |
@@ -29,11 +27,11 @@ jobs:
                 fi
               done
             fi
-      - run: mvn -DskipTests=true clean install dependency:go-offline
+      - run: mvn -DskipTests=true clean install
       - save_cache:
           paths:
             - ~/.m2
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: v1-dependencies-{{ .Revision }}
 
   test-h2:
     <<: *defaults
@@ -42,7 +40,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: v1-dependencies-{{ .Revision }}
       - run: mvn clean install -Ptravis
       - run:
           name: Save test results
@@ -54,7 +52,6 @@ jobs:
           path: ~/junit
       - store_artifacts:
           path: ~/junit
-
   test-mysql:
     <<: *defaults
     docker:
@@ -62,7 +59,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: v1-dependencies-{{ .Revision }}
       - run: mvn clean install -Pmysql
       - run:
           name: Save test results
@@ -74,7 +71,6 @@ jobs:
           path: ~/junit
       - store_artifacts:
           path: ~/junit
-
   test-postgresql:
     <<: *defaults
     docker:
@@ -82,7 +78,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: v1-dependencies-{{ .Revision }}
       - run: mvn clean install -Ppostgresql
       - run:
           name: Save test results
