pom.xml: remove ddl.sql from test jar
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/pom.xml
+++ b/pom.xml
@@ -236,4 +236,17 @@
             <artifactId>snakeyaml</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>ddl.sql</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
