--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
         <system>Github</system>
         <url>https://github.com/killbill/killbill-plugin-framework-java/issues</url>
     </issueManagement>
+    <properties>
+        <check.fail-spotbugs>true</check.fail-spotbugs>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
