--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
     <groupId>org.kill-bill.billing.plugin.java</groupId>
     <artifactId>killbill-base-plugin</artifactId>
-    <version>4.2.5-SNAPSHOT</version>
+    <version>4.2.5</version>
     <packaging>jar</packaging>
     <name>Kill Bill base OSGI plugin</name>
     <description>Kill Bill base OSGI plugin</description>
@@ -33,7 +33,7 @@
     <scm>
         <connection>scm:git:git://github.com/killbill/killbill-plugin-framework-java.git</connection>
         <developerConnection>scm:git:git@github.com:killbill/killbill-plugin-framework-java.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>killbill-base-plugin-4.2.5</tag>
         <url>http://github.com/killbill/killbill-plugin-framework-java/tree/master</url>
     </scm>
     <issueManagement>
