--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <properties>
         <check.fail-spotbugs>true</check.fail-spotbugs>
         <check.spotbugs-exclude-filter-file>spotbugs-exclude.xml</check.spotbugs-exclude-filter-file>
+        <killbill-api.version>0.54.0-9f8a501-SNAPSHOT</killbill-api.version>
         <!-- Temporary, until we get rid of SNAPSHOT dependencies on 0.23.x -->
         <killbill-platform.version>0.40.12</killbill-platform.version>
     </properties>
