--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.kill-bill.billing</groupId>
         <artifactId>killbill-oss-parent</artifactId>
-        <version>0.145.3-4770cdc-SNAPSHOT</version>
+        <version>0.145.3-e8112a5-SNAPSHOT</version>
     </parent>
     <groupId>org.kill-bill.billing.plugin.java</groupId>
     <artifactId>killbill-base-plugin</artifactId>
@@ -45,7 +45,7 @@
         <check.spotbugs-exclude-filter-file>spotbugs-exclude.xml</check.spotbugs-exclude-filter-file>
         <killbill-api.version>0.54.0-9f8a501-SNAPSHOT</killbill-api.version>
         <!-- Temporary, until we get rid of SNAPSHOT dependencies on 0.23.x -->
-        <killbill-platform.version>0.40.12</killbill-platform.version>
+        <killbill-platform.version>0.41.0-2931e45-SNAPSHOT</killbill-platform.version>
     </properties>
     <dependencies>
         <dependency>
