set killbill-api version in properties section

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <properties>
         <check.fail-spotbugs>true</check.fail-spotbugs>
         <check.spotbugs-exclude-filter-file>spotbugs-exclude.xml</check.spotbugs-exclude-filter-file>
+        <killbill-api.version>0.54.0-19db89f-SNAPSHOT</killbill-api.version>
     </properties>
     <dependencies>
         <dependency>
